Updated Employment History - Added AWS Updated Resume and Certificates

--- a/certifications.html
+++ b/certifications.html
@@ -4,8 +4,8 @@
 <head>
   <title>Rishi Bodke - Certifications</title>
   <meta charset="utf-8">
-  <meta name="description" content="Rishi Bodke is an experienced Cloud Practitioner.">
-  <meta name="keywords" content="Rishi Bodke Azure Cloud Architect">
+  <meta name="description" content="Rishi Bodke is an experienced AWS Azure Cloud Engineer.">
+  <meta name="keywords" content="Rishi Bodke Azure AWS Cloud Architect Cloud Engineer">
   <meta name="author" content="Rishi Bodke">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favi-->
@@ -61,8 +61,17 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4a6a2ef6-80bb-48c0-bd3d-e41a7615fc33" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2ca571b-8d61-4a09-81e3-270a4902bc59" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9d334d90-ca67-4f50-8ed7-88037631749f" data-share-badge-host="https://www.credly.com"></div>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
+
+          <div class="col">
+            <div class="card shadow h-100">
+              <img src="assets/aws_solutions_architect_associate.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="AWS Solutions Architect Associate">
+              <h5 class="card-header">AWS Solutions Architect Associate</h5>
+            </div>
+          </div>
 
           <div class="col">
             <div class="card shadow h-100">
@@ -186,13 +195,13 @@
         </div>
         <!-- Download Resume Button-->
         <div class="d-flex flex-row mt-5">
-          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_Cloud_Administrator.pdf"
+          <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_B.pdf"
               target="_blank">
               Resume(ENG)</a></div>
-          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/ボドケ_リシ_履歴書.pdf" target="_blank">
+          <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/履歴書_ボドケ_リシ.pdf" target="_blank">
               履歴書</a>
           </div>
-          <div class="p-2"><a class="btn btn-info" href="/rishi/assets/ボドケ_リシ_職務経歴書.pdf" target="_blank">
+          <div class="p-2"><a class="btn btn-info" href="/rishi/assets/職務経歴書_ボドケ_リシ.pdf" target="_blank">
               職務経歴書</a>
           </div>
         </div>
@@ -216,7 +225,7 @@
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
-    <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2022</p>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2021-2023</p>
   </footer>
 
   </div>
