--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Rishi Bodke</title>
   <meta charset="utf-8">
-  <meta name="description" content="Rishi Bodke is an experienced Website and UI/UX Designer.">
-  <meta name="keywords" content="Rishi Bodke Web Content Management Web Design UX UI">
+  <meta name="description" content="Rishi Bodke is an experienced AWS Azure Cloud Engineer.">
+  <meta name="keywords" content="Rishi Bodke AWS, Azure, Cloud Engineer, Cloud Infra Engineer">
   <meta name="author" content="Rishi Bodke">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--favi-->
@@ -62,17 +62,16 @@
           </div>
           
           <div>
-            <p>I'm a Cloud Practitioner and a Frontend Developer from India.</p>
+            <p>I'm a Cloud Engineer from India specilizing in AWS and Azure Cloud.</p>
             <p>I enjoy turning complex problems into simple, beautiful and intuitive solutions.
-              My job is to make design, implement and administor Cloud Solutions that are always functional.
+              My work includes designing, implementing and administering Cloud Solutions.
             </p>
           </div>
           <div>
             <h5>Goals for the future</h5>
             <p>
-              In the near future, I want to go, live and work in Japan and experience it for myself.
-              <br>My long term goal is to travel all around the world exploring all kinds of places, and meeting new
-              people.
+              In the near future, I want live and work in Japan.
+              <br>My dream is to travel all around the world exploring all kinds of places, and meeting people from different cultures.
             </p>
             </div>
           <hr />
@@ -84,30 +83,55 @@
             <h4 class="section-title"><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
             <ul class="time-line">
               <li class="time-line-item">
-                <span class="badge bg-primary">Oct 2021 ~ Present</span>
-                <h6 class="time-line-item-title">Project Engineer</h6>
-                <p class="time-line-item-subtitle">Wipro Limited</p>
-                <p class="time-line-item-content">Project Engineer working in Mobility and User Experience practice.
+                <span class="badge bg-primary">July 2022 ~ Present</span>
+                <h5 class="time-line-item-title">Amazon Web Services India</h5>
+                <h6 class="time-line-item-subtitle">Cloud Support Associate</h6>
+                <p class="time-line-item-content">
+                  <ul>
+                  <li>Providing Premium Support to AWS Business and Enterprise customers as part of the Big Data Team on the various Big Data ETL Services such as AWS Glue, Athena, Lake Formation, Apache Airflow.
+                  </li>
+                </ul>
                 </p>
               </li>
               <li class="time-line-item">
-                <span class="badge bg-primary">2018 ~ Present</span>
-                <h6 class="time-line-item-title">Freelancer</h6>
-                <p class="time-line-item-subtitle">Web Design & Development</p>
-                <p class="time-line-item-content">Making designs for Web and Apps, designing banners, developing
-                  websites
-                  using CMS like WordPress, Joomla and Drupal.</p>
+                <span class="badge bg-primary">Oct 2021 ~ July 2022</span>
+                <h5 class="time-line-item-title">Wipro Limited</h5>
+                <h6 class="time-line-item-subtitle">Project Engineer</h6>
+                <p class="time-line-item-content">
+                  <ul>
+                  <li>Joined the Company as a fresh graduate</li>
+                  <li>Learned about Back-end technologies such as Core Java, J2EE, JDBC, Servlet, Tomcat, Spring Framework</li>
+                  <li>Learned about Front-end technologies such as HTML, CSS, Sass, JavaScript, React JS</li>
+                  <li>Learned about Operating and Administering Azure and AWS Cloud and their Iaas, Paas and Saas offerings</li>
+                  <li>Learned about managing Docker Containers and Images</li>
+                </ul>
+                </p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">Jan 2018 - Oct 2021</span>
+                <h5 class="time-line-item-title">UserTesting.com</h5>
+                <h6 class="time-line-item-subtitle">Freelance Contributor - Usabilitiy Testing</h6>
+                <p class="time-line-item-content">
+                  <ul>
+                    <li>Usability Testing of new websites and applications or new features before they are launched to the public</li>
+                    <li>Completed over 150 tests and earned over 1500 USD</li>
+                  </ul>
+                </p>
+              </li>
+              <li class="time-line-item">
+                <span class="badge bg-primary">Jan 2018 ~ Jan 2021</span>
+                <h5 class="time-line-item-title">Otaku Shinbun</h5>
+                <h6 class="time-line-item-subtitle">Web/App Design & Development, Owner</h6>
+                <p class="time-line-item-content">
+                  <ul>
+                    <li>Made designs for the website, developing the website using WordPress CMS</li>
+                    <li>Designed the UI and UX for the entire app from scratch</li>
+                    <li>Translate Japanese news to English and post summaries of it on the app</li>
+                  </ul>
+                </p>
               </li>
 
-              <li class="time-line-item">
-                <span class="badge bg-primary">Jan 2018 - Dec 2021</span>
-                <h6 class="time-line-item-title">Freelance Contributor - Usabilitiy Testing</h6>
-                <p class="time-line-item-subtitle">UserTesting.com</p>
-                <p class="time-line-item-content">Usability Testing of new websites and applications or new features
-                  before they are
-                  launched to the public.
-                </p>
-              </li>
+              
             </ul>
           </div>
           <div class="col-lg-6">
@@ -115,7 +139,7 @@
             <ul class="time-line">
               <li class="time-line-item">
                 <span class="badge bg-primary">2017 - 2021</span>
-                <h6 class="time-line-item-title">Bachelor's in Computer Science and Engineering</h6>
+                <h6 class="time-line-item-title">Bachelor's in Computer Science Engineering</h6>
                 <p class="time-line-item-subtitle">Rajasthan Technical University, India</p>
                 <p class="time-line-item-content">Bachelor of Technology, Computer Science and Engineering</p>
               </li>
@@ -123,7 +147,7 @@
                 <span class="badge bg-primary">2004 - 2016</span>
                 <h6 class="time-line-item-title">Schooling</h6>
                 <p class="time-line-item-subtitle">Kendriya Vidyalaya Sangathan, India</p>
-                <p class="time-line-item-content">Elementary, Secondary and Higher Secondary schooling from Kendriya
+                <p class="time-line-item-content">Primary, Secondary and Higher Secondary schooling from Kendriya
                   Vidyalaya.
                 </p>
               </li>
@@ -137,6 +161,7 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="4a6a2ef6-80bb-48c0-bd3d-e41a7615fc33" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2ca571b-8d61-4a09-81e3-270a4902bc59" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9d334d90-ca67-4f50-8ed7-88037631749f" data-share-badge-host="https://www.credly.com"></div>
       </section>
       <section>
         <h4><i class="fas fa-magic"></i> SKILLS</h4>
@@ -146,7 +171,7 @@
               <h5 class="card-header">Cloud Computing</h5>
               <div class="card-body">
                 <p class="card-text"> Microsoft Azure, Amazon Web Services (AWS), 
-                  Administration, Cloud Solutions Architect, Virtual Networks, Cloud Networking, CI/CD
+                  Cloud Infrastructure Administration & Operations, Cloud Solutions Architect, Virtual Networks, Cloud Networking, CI/CD
                 </p>
               </div>
             </div>
@@ -216,7 +241,7 @@
               <h5 class="card-header"><i class="fa fa-language" aria-hidden="true"></i> Languages </h5>
               <div class="card-body">
                 <p class="card-text"> English (fluent), Hindi(native),
-                  Marathi(native), Japanese (conversational)
+                  Marathi(native), Japanese (JLPT N2)
                 </p>
               </div>
             </div>
@@ -245,13 +270,14 @@
       </section>
 
       <div class="d-flex flex-row mt-5">
-        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_Cloud_Administrator.pdf" target="_blank">
+        <div class="p-2"><a class="btn btn-primary" href="/rishi/assets/Rishi_B.pdf"
+            target="_blank">
             Resume(ENG)</a></div>
-        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/ボドケ_リシ_履歴書.pdf" target="_blank">
-          履歴書</a>
+        <div class="p-2"><a class="btn btn-danger" href="/rishi/assets/履歴書_ボドケ_リシ.pdf" target="_blank">
+            履歴書</a>
         </div>
-        <div class="p-2"><a class="btn btn-info" href="/rishi/assets/ボドケ_リシ_職務経歴書.pdf" target="_blank">
-          職務経歴書</a>
+        <div class="p-2"><a class="btn btn-info" href="/rishi/assets/職務経歴書_ボドケ_リシ.pdf" target="_blank">
+            職務経歴書</a>
         </div>
       </div>
       <hr />
@@ -285,7 +311,7 @@
         <i title="email" class="far fa-envelope fa-lg social"></i>
       </a>
     </div>
-    <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2022</p>
+    <p class="d-flex justify-content-center mt-2">Made with ❤️ by Rishi, © 2021-2023</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
