Made below changes: 1. Updated Experience. Added Rakuten 2. Added AWS Dev Asso badge and cert 3. Updated resume

--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
       </section>
       <section class="resume-section">
         <div class="row">
-          <div class="col-lg-6">
             <h4 class="section-title"><i class="fas fa-briefcase"></i> EXPERIENCE</h4>
             <ul class="time-line">
               <li class="time-line-item">
-                <span class="badge bg-primary">July 2022 ~ Present</span>
+                <span class="badge bg-primary">July 2022 ~ May 2023</span>
                 <h5 class="time-line-item-title">Amazon Web Services India</h5>
                 <h6 class="time-line-item-subtitle">Cloud Support Associate</h6>
                 <p class="time-line-item-content">
@@ -134,7 +133,8 @@
               
             </ul>
           </div>
-          <div class="col-lg-6">
+          <hr />
+          <div class="row">
             <h4 class="section-title"><i class="fas fa-graduation-cap"></i> EDUCATION</h4>
             <ul class="time-line">
               <li class="time-line-item">
@@ -153,7 +153,6 @@
               </li>
             </ul>
           </div>
-        </div>
       </section>
       <section>
         <h4><i class="fas fa-certificate"></i> BADGES</h4>
@@ -162,6 +161,7 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2ca571b-8d61-4a09-81e3-270a4902bc59" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9d334d90-ca67-4f50-8ed7-88037631749f" data-share-badge-host="https://www.credly.com"></div>
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c917b74d-bc6e-4da6-91ed-023c169d35ba" data-share-badge-host="https://www.credly.com"></div>
       </section>
       <section>
         <h4><i class="fas fa-magic"></i> SKILLS</h4>
