--- a/certifications.html
+++ b/certifications.html
@@ -62,9 +62,17 @@
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="a2ca571b-8d61-4a09-81e3-270a4902bc59" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="0158187d-7449-4265-887a-59d977353240" data-share-badge-host="https://www.credly.com"></div>
         <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="9d334d90-ca67-4f50-8ed7-88037631749f" data-share-badge-host="https://www.credly.com"></div>
-
+        <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="c917b74d-bc6e-4da6-91ed-023c169d35ba" data-share-badge-host="https://www.credly.com"></div>
         <div class="row row-cols-1 row-cols-md-3 g-4 mb-4">
 
+          <div class="col">
+            <div class="card shadow h-100">
+              <img src="assets/aws_developer_associate.jpg" class="card-img-top .img-fluid"
+                onclick="openModal();currentSlide(1)" alt="AWS Developer Associate">
+              <h5 class="card-header">AWS Developer Associate</h5>
+            </div>
+          </div>
+          
           <div class="col">
             <div class="card shadow h-100">
               <img src="assets/aws_solutions_architect_associate.jpg" class="card-img-top .img-fluid"
